# OOPS20-WordInput

./: .gitignore  Articles.cpp  ArticlesWordReader.cpp  ArticlesWordReader.hpp  CMakeLists.txt  Dictionary.cpp  DictionaryWordReader.cpp  DictionaryWordReader.hpp  LongestWord.cpp  ShortWordCount.cpp  ShortWords.cpp  WordInput.cpp  WordInput.hpp  WordReader.cpp  WordReader.hpp  WordSizes.cpp
